--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
+html, body, #root, .App {
+  height: 100vh;
+}
+
 body {
+  height: 100vh;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
