--- a/src/Visualizer/styles/Header.css
+++ b/src/Visualizer/styles/Header.css
@@ -4,6 +4,11 @@
     -moz-box-shadow: 11px 10px 29px 0px rgba(179,179,179,0.49);
     border-radius: 20px;
     background-color: #f8f8f8;
+    border-color: rgb(233, 233, 233);
+    background: #ffffff;
+background: linear-gradient(17deg,#ffffff 0%, #ececec 100%);
+background: -webkit-linear-gradient(17deg,#ffffff 0%, #ececec 100%);
+background: -moz-linear-gradient(17deg,#ffffff 0%, #ececec 100%);
 }
 
 .github-icon {
