fix bugs in pathfinding algorithms, add disabled class to all buttons during visualization

--- a/src/Visualizer/styles/Node.css
+++ b/src/Visualizer/styles/Node.css
@@ -39,6 +39,10 @@
   animation-fill-mode: forwards;
 }
 
+.node:hover {
+  opacity: 0.1;
+}
+
 @keyframes visitedAnimation {
   0% {
     transform: scale(1);
