--- a/src/Visualizer/styles/App.css
+++ b/src/Visualizer/styles/App.css
@@ -20,6 +20,7 @@
 .board, .interface {
   display: inline-block;
   margin: 20px 10px;
+  margin-bottom: 0;
   vertical-align: top;
   text-align: center;
 }
