--- a/src/Visualizer/styles/App.css
+++ b/src/Visualizer/styles/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
   height: 100%;
+  background-color: #F8F5F1;
 }
 
 .page {
@@ -14,7 +15,8 @@
   box-shadow: 13px 15px 48px -12px rgba(120, 116, 116, 0.7);
   -webkit-box-shadow: 13px 15px 48px -12px rgba(120, 116, 116, 0.7);
   -moz-box-shadow: 13px 15px 48px -12px rgba(120, 116, 116, 0.7);
-  border-color: rgb(255, 255, 255);
+  border-color: #F8F5F1;
+  background-color: #F8F5F1;
 }
 
 .board, .interface {
