--- a/src/Visualizer/styles/Header.css
+++ b/src/Visualizer/styles/Header.css
@@ -1,20 +1,24 @@
 .navbar {
-    box-shadow: 11px 10px 29px 0px rgba(179,179,179,0.49);
-    -webkit-box-shadow: 11px 10px 29px 0px rgba(179,179,179,0.49);
-    -moz-box-shadow: 11px 10px 29px 0px rgba(179,179,179,0.49);
-    border-radius: 20px;
-    background-color: #f8f8f8;
-    border-color: rgb(233, 233, 233);
-    background: #ffffff;
-background: linear-gradient(17deg,#ffffff 0%, #ececec 100%);
-background: -webkit-linear-gradient(17deg,#ffffff 0%, #ececec 100%);
-background: -moz-linear-gradient(17deg,#ffffff 0%, #ececec 100%);
+  box-shadow: 11px 10px 29px 0px rgba(179, 179, 179, 0.49);
+  -webkit-box-shadow: 11px 10px 29px 0px rgba(179, 179, 179, 0.49);
+  -moz-box-shadow: 11px 10px 29px 0px rgba(179, 179, 179, 0.49);
+  border-radius: 20px;
+  background-color: #F8F5F1;
+  border-color: #F8F5F1;
+  background: #F8F5F1;
+  background: linear-gradient(17deg, #F8F5F1 0%, #F8F5F1 100%);
+  background: -webkit-linear-gradient(17deg, #F8F5F1 0%, #ececec 100%);
+  background: -moz-linear-gradient(17deg, #F8F5F1 0%, #ececec 100%);
 }
 
 .github-icon {
-    padding-right: 5px;
+  padding-right: 5px;
 }
 
 .navbar-brand {
-    color: #1F1D36;
+  color: #343F56;
+}
+
+.fa-github {
+    color: #343F56;
 }
