--- a/src/Visualizer/styles/Interface.css
+++ b/src/Visualizer/styles/Interface.css
@@ -1,6 +1,7 @@
 li.list-group-item {
   padding: auto;
   border: 0;
+  background-color: #F8F5F1;
 }
 
 .interface-card {
@@ -11,7 +12,7 @@ p {
   display: flex;
   text-align: left;
   margin: 0px;
-  color: #5C527F;
+  color: #343F56;
 }
 
 .control-btn {
@@ -33,8 +34,8 @@ p {
 }
 
 .btn-outline-dark {
-  border-color: #5C527F !important;
-  color: #5C527F;
+  border-color: #343F56 !important;
+  color: #343F56;
 }
 
 .start-row {
@@ -49,28 +50,38 @@ p {
 #preset-btn {
   border: 0;
   width: 100%;
+  border-radius: 4px;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
 }
 
 input[type=radio]:checked + .btn-outline-dark {
-  background-color:#5C527F;
+  background-color:#343F56;
 }
 
 #preset-btn:hover {
-  background-color: #5C527F;
+  background-color: #343F56;
 }
 
 .dropdown-toggle:focus {
-  background-color: #5C527F;
+  background-color: #343F56;
 }
 
 .btn-success {
-  background-color: #5C527F;
-  border-color: #5C527F;
+  background-color: #387C6D;
+  border-color: #387C6D;
+}
+/* .btn-success:hover {
+  background-color: #7896a5 !important;
+  border-color: #7896a5 !important;
 }
 
+.btn-success:focus {
+  background-color: #7896a5 !important;
+  border-color: #7896a5 !important;
+} */
+
 .btn-danger {
-  background-color: #ECB390;
-  border-color: #ECB390;
+  background-color: #EE6F57;
+  border-color: #EE6F57;
 }
